adicionando telas de login e cadastro e outras funcionalidades